fixes icon issue on smaller screens

--- a/public/style.css
+++ b/public/style.css
@@ -43,7 +43,7 @@ main {
 
 section {
     margin: 0 auto;
-    min-width: 250px;
+    min-width: 300px;
     padding: var(--size8) 0;
     width: 60%
 }
